--- a/ObjLoader.vcxproj
+++ b/ObjLoader.vcxproj
@@ -23,14 +23,19 @@
     <ClCompile Include="src\Logger\Logger.cpp" />
     <ClCompile Include="src\ObjHelpers.cpp" />
     <ClCompile Include="src\ObjLoader.cpp" />
+    <ClCompile Include="src\ThreadPool\ThreadPool.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Logger\Logger.h" />
-    <ClInclude Include="include\ObjHelpers.h" />
-    <ClInclude Include="include\ObjLoader.h" />
-    <ClInclude Include="include\ThreadPool\ThreadPool.h" />
-    <ClInclude Include="include\Time\Timer.h" />
-    <ClInclude Include="include\Types\Types.h" />
+    <ClInclude Include="include\Logger\Logger.hpp" />
+    <ClInclude Include="include\ObjHelpers.hpp" />
+    <ClInclude Include="include\ObjLoader.hpp" />
+    <ClInclude Include="include\ThreadPool\ThreadPool.hpp" />
+    <ClInclude Include="include\Time\Timer.hpp" />
+    <ClInclude Include="include\Types\Types.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="include\ThreadPool\ThreadPool.inl" />
+    <None Include="include\Time\Timer.inl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
