--- a/ObjLoader.vcxproj.filters
+++ b/ObjLoader.vcxproj.filters
@@ -27,25 +27,36 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ThreadPool\ThreadPool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\ObjLoader.h">
+    <ClInclude Include="include\ObjLoader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Time\Timer.h">
+    <ClInclude Include="include\Time\Timer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\ObjHelpers.h">
+    <ClInclude Include="include\ObjHelpers.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Logger\Logger.h">
+    <ClInclude Include="include\Logger\Logger.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Types\Types.h">
+    <ClInclude Include="include\Types\Types.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\ThreadPool\ThreadPool.h">
+    <ClInclude Include="include\ThreadPool\ThreadPool.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="include\ThreadPool\ThreadPool.inl">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="include\Time\Timer.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
